--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-.eb-garamond-<uniquifier> {
+.eb-garamond-500 {
   font-family: "EB Garamond", serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: 500;
   font-style: normal;
 }
 
