--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h2, h3 {
 }
 
 .container {
-  padding: 2rem;
+  padding: 2rem 10vh;
   border: 2px solid salmon;
   max-width: 720px;
   margin: auto;
