--- a/style.css
+++ b/style.css
@@ -16,9 +16,15 @@ h2, h3 {
   font-weight: 500;
 }
 
+.image {
+  background: url(/rozandjim.webp) no-repeat center center;
+  width: 10vw;
+  min-height: 100%;
+}
+
 .container {
-  padding: 10vh 2rem;
-  border: 2px solid salmon;
+  background-color: white;
+  box-shadow: 0 4px -2px 24px rgba(0,0,0,.1);
   max-width: 720px;
   margin: auto;
 }
