--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h2, h3 {
 
 .container {
   background-color: white;
-  box-shadow: 0 4px -2px 24px rgba(0,0,0,.1);
+  box-shadow: 0px 4px -2px 24px rgba(0,0,0,.1);
   max-width: 720px;
   margin: auto;
 }
