--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ body {
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
+  background:#d0d69b;
+  min-height: 100vh;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+h1,h2,h3,h4,h5 {
+  margin-top: 0;
 }
 
 h2, h3 {
@@ -19,14 +27,23 @@ h2, h3 {
 .image {
   display: block;
   background: url(/rozandjim.webp) no-repeat center center;
-  width: 10vw;
+  background-size: cover;
+  width: 15vw;
   min-height: 100%;
+}
+
+.info {
+  padding: 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .container {
   background-color: white;
-  box-shadow: 0px 4px -2px 24px rgba(0,0,0,.1);
-  max-width: 720px;
+  box-shadow: 0px 8px 24px -2px rgba(0, 0, 0, 0.1);
+  max-width: 840px;
   margin: auto;
 }
 
