--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ h2, h3 {
   box-shadow: 0px 8px 24px -2px rgba(0, 0, 0, 0.1);
   max-width: 840px;
   margin: auto;
+  display: flex;
+  min-height: 70vh;
 }
 
 .grey {
