--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   padding: 2rem;
   font-family: "EB Garamond", serif;
@@ -42,6 +46,7 @@ h2, h3 {
 }
 
 .container {
+  flex-grow: 1;
   background-color: white;
   box-shadow: 0px 8px 24px -2px rgba(0, 0, 0, 0.1);
   max-width: 840px;
