--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   display: flex;
   align-items: center;
@@ -14,18 +13,47 @@ body {
   min-height: 100vh;
   margin: 0;
   box-sizing: border-box;
+  color: #051635;
 }
 
-h1,h2,h3,h4,h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   margin-top: 0;
 }
 
-h2, h3 {
-  font-weight: 300;
+h1,
+h2,
+h3 {
+  font-weight: 400;
+}
+
+p {
+  font-size: 1.13rem;
+  margin-top: 0;
+  margin-bottom: 2.5rem;
+  color: #4e6478;
 }
 
 .bold {
-  font-weight: 500;
+  font-weight: 400;
+}
+
+.purp,
+a {
+  color: #5a6db1;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.l-a {
+  text-align: left;
 }
 
 .image {
@@ -36,6 +64,10 @@ h2, h3 {
   min-height: 100%;
 }
 
+.m-w {
+  max-width: 580px;
+}
+
 .info {
   margin: 1rem;
   border: 1px dashed #486fba;
@@ -44,72 +76,105 @@ h2, h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .container {
   flex-grow: 1;
   background-color: white;
   box-shadow: 0px 8px 24px -2px rgba(0, 0, 0, 0.1);
-  max-width: 680px;
+  width: 100%;
+  max-width: 780px;
   margin: auto;
   display: flex;
   min-height: 70vh;
 }
 
 .grey {
-  color:#5e7695;
+  color: #5e7695;
 }
 
+/* Accordion Header */
+.accordion {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 8px 16px;
+  background-color: #f4f7fb;
+  border: 1px solid #486fba;
+  border-radius: 5px;
+}
 
-        /* Accordion Header */
-        .accordion {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          cursor: pointer;
-          padding: 10px;
-          background-color: #f9f9f9;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-      }
+.accordion:hover {
+  background-color: #f1f1f1;
+}
 
-      .accordion:hover {
-          background-color: #f1f1f1;
-      }
+.accordion-title {
+  font-size: 1.2em;
+  margin: 0;
+}
 
-      .accordion-title {
-          font-size: 1.2em;
-          font-weight: bold;
-          margin: 0;
-      }
+.accordion-icon {
+  font-size: 1.5em;
+  transition: transform 0.2s ease-in-out;
+}
 
-      .accordion-icon {
-          font-size: 1.5em;
-          transition: transform 0.2s ease-in-out;
-      }
+.accordion-icon.open {
+  transform: rotate(45deg); /* Rotate for "minus" when open */
+}
 
-      .accordion-icon.open {
-          transform: rotate(45deg); /* Rotate for "minus" when open */
-      }
-
-      /* Accordion Content */
-      .accordion-content {
-          display: none; /* Hidden by default */
-          padding: 15px;
-          border: 1px solid #ccc;
-          border-top: none;
-          border-radius: 0 0 5px 5px;
-          background-color: #fff;
-      }
-
+/* Accordion Content */
+.accordion-content {
+  display: none; /* Hidden by default */
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+  background-color: #fff;
+}
 
 #mc_embed_signup {
-  font: 14px Helvetica,Arial,sans-serif; 
-  padding-top: .5rem;
-  clear:left; 
+  font: 14px Helvetica, Arial, sans-serif;
+  padding-top: 0.5rem;
+  clear: left;
   width: 100%;
+}
+
+.address {
+  min-width: 160px;
+  margin-bottom: 0;
+}
+
+.address-col {
+  padding: 1rem;
+  background-color: #f4f7fb;
+  border-radius: 8px;
+  margin-bottom: 2.5rem;
+}
+.address-col iframe {
+  width: 100%;
+  max-width: 80vw;
+  border-radius: 4px;
+  margin-right: 20px;
 }
 
 #mc_embed_signup .button {
   min-height: 44px;
+}
+
+@media (max-width: 600px) {
+  .address-col {
+    flex-wrap: wrap;
+  }
+  .info,
+  body {
+    padding: 16px 12px;
+  }
+  .info {
+    margin: 0.75rem;
+    border: none;
+  }
+  .address-col iframe {
+    margin-right: 0;
+  }
 }
